--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,16 @@
   <version>1.0-SNAPSHOT</version>
   <name>demo-sonar</name>
   <url>http://maven.apache.org</url>
+   <properties>
+        <!-- Java version used to compile -->
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+
+        <!-- Where JaCoCo writes the XML coverage report that SonarQube will read -->
+        <sonar.coverage.jacoco.xmlReportPaths>
+            target/site/jacoco/jacoco.xml
+        </sonar.coverage.jacoco.xmlReportPaths>
+    </properties>
   <build>
     <plugins>
         <plugin>
